# PassfaultPlusPlus

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
include/: AnalysisListener.hpp  Analyze.hpp  CompositeFinder.hpp  FinderByPropsBuilder.hpp  PasswordAnalysis.hpp  PasswordPattern.hpp  PasswordResult.hpp  PasswordResults.hpp  PathCost.hpp  PatternFinder.hpp  RandomPattern.hpp  SecureString.hpp  TimeToCrack.hpp
include/analyisis/: PasswordAnalysis.hpp
include/common/: Path.hpp  Pattern.hpp
include/finder/: Finder.hpp  RepeatingPatternFinder.hpp  SequentialFinder.hpp
include/finder/dictionary/: DictionaryFinder.hpp  Strategy.hpp
include/finder/keyboard/: KeySequenceFinder.hpp
include/io/: FinderByPropsBuilder.hpp  JsonWriter.hpp  TimeToCrack.hpp
include/pattern/: Random.hpp  RandomPattern.hpp
include/pattern/dictionary/: DictionaryStrategy.hpp  DiskDictionary.hpp  MemoryDictionary.hpp  Misspelled.hpp
include/pattern/keyboard/: Diagonal.hpp  Horizontal.hpp  ZigZag.hpp
lib/java/: CMakeLists.txt  CharSequence.hpp
lib/java elements/: CharSequence.hpp
lib/utf8/: CMakeLists.txt  utf8.hpp
lib/utf8/utf8/: checked.hpp  core.hpp  unchecked.hpp
libpassfault/: CMakeLists.txt
libpassfault/include/analyisis/: PasswordAnalysis.hpp
libpassfault/include/common/: Path.hpp  SecureString.hpp
libpassfault/include/finder/: PatternFinder.hpp
libpassfault/include/io/: JsonWriter.hpp
libpassfault/include/pattern/dictionary/: Dictionary.hpp  Insertion.hpp  Substitution.hpp
libpassfault/include/pattern/keyboard/: Hop.hpp  KeySequence.hpp  Layout.hpp
libpassfault/lib/utf8/: utf8.hpp
libpassfault/lib/utf8/utf8/: checked.hpp  unchecked.hpp
libpassfault/src/: CMakeLists.txt  PasswordAnalysis.cpp  Path.cpp  SecureString.cpp
libpassfault/src/common/: CMakeLists.txt  SecureString.cpp
libpassfault/src/io/: CMakeLists.txt  JsonWriter.cpp
libpassfault/src/pattern/: CMakeLists.txt
libpassfault/src/pattern/dictionary/: CMakeLists.txt
libpassfault/src/pattern/keyboard/: CMakeLists.txt
libpassfault/test/: CMakeLists.txt  UnitTests.cpp
libpassfault/test/common/: SecureString.cpp
libpassfault/test/pattern/: CMakeLists.txt
libpassometer/include/: Analyze.hpp
libpassometer/lib/utf8/: CMakeLists.txt  utf8.hpp
libpassometer/res/wordlists/: README.md
libpassometer/res/wordlists/frequency/: en-2011.txt  en-2012.txt  en-total.txt  es-2011.txt  es-2012.txt  es-total.txt
package/: README.md
src/: PasswordAnalysis.cpp  PasswordPattern.cpp  PathCost.cpp  Pattern.cpp  SecureString.cpp  TimeToCrack.cpp
src/io/: JsonWriter.cpp  TimeToCrack.cpp
src/pattern/: Random.cpp  RandomPattern.cpp
